https://savics.atlassian.net/browse/MRSN-135